# clear-gcp-storage

./: .env.example  README.md  pyproject.toml
src/: logger.py  main.py
