[tool.poetry]
name = "clear-google-storage"
version = "0.1.0"
description = ""
authors = ["thrabovenskyi1 <Teodor.Hrabovenskyi@dataart.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.1"
google-cloud-storage = "^2.16.0"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
